# foray

./: .clang-format  README.md  justfile  meson.build
src/: canvas.cpp  canvas.hpp  foray.cpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp  vec3.cpp  vec3.hpp
